--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^3.1.0",
     "htmlhint": "^1.0.0",
     "jest": "^27.0.1",
+    "nodemon": "^2.0.18",
     "opener": "^1.5.1",
     "serve": "^13.0.2"
   },
@@ -27,4 +28,3 @@
     "node": ">=14.x"
   }
 }
-
